fixed responsive issue on mobile

--- a/ASSETS/styles.css
+++ b/ASSETS/styles.css
@@ -363,6 +363,9 @@ a:hover {
   #footer {
     margin: 1%;
     padding: 2px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .share_container i {
